<resources>
    <string name="app_name">Cheap Fashion</string>

    <string name="emptyText"></string>
    <string name="emailLoginHint">Email</string>
    <string name="emailForgotPassHint">Email</string>
    <string name="emailSingUpHint">Email</string>
    <string name="fullNameSignUpHint">Name Surname</string>
    <string name="phoneNumberSignUpHint">Phone Number</string>
    <string name="passSignUpHint">Password</string>
    <string name="signUpButtonLabel">Sign Up</string>
    <string name="sendButtonLabelForgotPass">Send</string>
    <string name="passLoginHint">Password</string>
    <string name="forgotPass"><u>Forgot password?</u></string>
    <string name="loginButtonLabel">Login</string>
    <string name="signUpText">Don’t have an account? <b><u>Sign Up!</u></b></string>
    <string name="fashionLoginLabel">Fashion is waiting for you</string>
    <string name="changePassText">Do you want to change your pass? <b><u>Click!</u></b></string>
    <string name="saveProfileButtonLabel">Save</string>
    <string name="market_bottom_nav_menu">Market</string>
    <string name="liked_bottom_nav_menu">Liked</string>
    <string name="stuff_bottom_nav_menu">Stuff</string>
    <string name="profile_bottom_nav_menu">Profile</string>
    <string name="logout_bottom_nav_menu">Logout</string>
    <string name="newPasswordChangePasswordHint">Current Password</string>
    <string name="repeatPasswordChangePasswordHint">New Password</string>
    <string name="changePasswordButtonLabel">Save</string>
    <string name="productNameProductDetailText">Producto1</string>
    <string name="productPriceProductDetailText">20,00$</string>
    <string name="nameSurnameProductDetailText">Name Surname</string>
    <string name="productDescriptionProductDetailText">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.”</string>
    <string name="addProductAddImageText">Add Image</string>
    <string name="addProductProductHint">Product</string>
    <string name="addProductPriceHint">Price</string>
    <string name="addProductDescriptionHint">Description</string>
    <string name="addProductAddButtonLabel">Add</string>
    <string name="favoriteProductNameText">Product1</string>
    <string name="favoriteProductPriceText">Precio1</string>
    <string name="homeProductNameText">Ropa 1</string>
    <string name="homeProductPriceText"><b>Precio 1</b></string>

    <string name="emailLoginError">Email must not be empty</string>
    <string name="passwordLoginError">Password must not be empty</string>

    <string name="signUpErrorEmpty">Fields must not be empty</string>
    <string name="signUpCorrect">Registered successfully</string>

    <string name="passwordNotValid">Password must be at least 8 characters long</string>

</resources>