...
                app:errorTextAppearance="@style/error_appearance"
                android:layout_gravity="center"
                android:elevation="4dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailLoginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_mail_24px"
                    android:drawableTint="@color/backgroundColor"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:hint="@string/emailLoginHint"
...
                android:layout_gravity="center"
                android:elevation="4dp"
                app:errorTextAppearance="@style/error_appearance"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passLoginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:hint="@string/passLoginHint"
                    android:inputType="textPassword"
                    tools:text="@string/passSignUpHint" />
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:elevation="6dp"
            android:fontFamily="@font/source_sans_pro_bold"
...
